--- a/css/style.css
+++ b/css/style.css
@@ -119,26 +119,32 @@ p {
   margin: 0.6rem;
 }
 @media (max-width:980px) {
+  h5,h4{
+    font-size: 3.2rem;
+  }
     p {
     font-size: 2rem;
-    line-height: 2;
+    line-height: 1;
+  }
+  h6{
+    font-size: 1.3rem;
   }
   .big-heading,.mid-heading{
     font-size: 3.5rem;
   }
   /* TESTIMONIALS SECTION */
   .web-img {
-    width: 4.7rem;
+    width: 5.3rem;
   }
 /* NAVBAR SECTION */
   .nav-item {
-    font-size: 1.75rem;
+    font-size: 2rem;
   }
   .nav-cow{
-    width: 8rem;
+    width: 9.5rem;
   }
   .nav-img{
-    width: 2.8rem;
+    width: 3rem;
   }
   .d-flex button {
     width: 6.8rem;
@@ -149,7 +155,7 @@ p {
     width: 2.5rem;
   }
   .down-sec-b{
-  font-size: 1.75rem;
+  font-size: 2rem;
   }
 /* FOOTER SECTION */
   #footer .web-img {
